--- a/style.css
+++ b/style.css
@@ -340,4 +340,57 @@ body{
     font-weight: 500px;
     border: none ;
 }
+/* footer styles */
+.footer{
+    width: 1120px;
+    height: auto;
+    margin-top: 180px;
+    padding: 50px 160px;
+}
+
+.footer-container{
+    display: grid;
+    grid-template-columns: minmax(250px, 1fr) minmax(85px, 1fr) minmax(170px, 1fr) minmax(200px, auto);
+    gap: 111px;
+}
+
+.footer-img{
+    width: 135px;
+}
+
+.footer-logo,
+.footer-links,
+.footer-list,
+.social-media {
+  width: auto;
+}
+
+
+.footer-logo,
+.footer-links, 
+.footer-list{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-links, 
+.footer-list li{
+    margin-bottom: 32px;
+}
+
+
+.footer-links ul, 
+.footer-list ul{
+    list-style: none;
+}
+
+.footer-links a,
+.footer-list a{
+    text-decoration: none;
+    color: #6B7280;
+}
+
+.social-media img{
+    margin-right: 24px;
+}
 
